kustomize/patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
spec:
  # Ajoutez ici les modifications souhaitées pour le service FastAPI

---

apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  # Ajoutez ici les modifications souhaitées pour le service MySQL

---

apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
spec:
  # Ajoutez ici les modifications souhaitées pour le service PHPMyAdmin
